fixed styling for desktop and alignment of pages

--- a/stylesheets/articles.css
+++ b/stylesheets/articles.css
@@ -4,14 +4,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body .site {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
-    justify-content: center;
-    max-width: 1000px;
-}
-
 img.example-images.instruction-screenshot {
     display: none;
 }
@@ -320,8 +312,9 @@ img.example-images.instruction-screenshot.active {
         color: #fff;
         overflow: scroll;
         margin-bottom: 44px;
-        margin-left: 15em;
-        margin-right: 15em;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 900px;
     }
 
     h1, h2, h3, h4, h5, h6 {
@@ -762,8 +755,9 @@ img.example-images.instruction-screenshot.active {
         color: #000;
         overflow: scroll;
         margin-bottom: 44px;
-        margin-left: 15em;
-        margin-right: 15em;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 900px;
     }
 
     h1, h2, h3, h4, h5, h6 {
